# matter4max

./: .FACTS.md.swp  .gitignore  CMakeLists.txt  HASS_HowTo.md  HomeAssistantHowTo.md  LOI.md  README.md  capture_commissioning.py  clean.py  clean_matter.py  esp_out.txt  factory.csv  factory_nvs.csv  force_pair.py  full_log.txt  generate_factory_nvs.py  generate_payload.py  generate_verifier.py  get_matter_code.py  get_matter_codes.py  get_nodes.py  matter_mac_provisioning.py  pair.py  pairing_log.txt  parse_fhem.py  partitions.csv  patch_matter.sh  read_serial.py  read_serial_boot.py  sdkconfig.defaults  test_boot.py  test_boot2.py  test_mode.py  test_monitor.py  test_reboot.py  test_serial.py  test_wifi.py  transmit_cul.py
components/espressif__esp_matter/: .component_hash  CHECKSUMS.json  idf_component.yml
components/espressif__esp_matter/components/esp_matter/: Kconfig  esp_matter_core.cpp
components/espressif__esp_matter/components/esp_matter/data_model/: esp_matter_attribute.h  esp_matter_data_model.cpp
components/espressif__esp_matter/components/esp_matter/zap_common/zap-generated/: endpoint_config.h
components/espressif__esp_matter/components/esp_matter_bridge/: esp_matter_bridge.h
components/espressif__esp_matter/connectedhomeip/connectedhomeip/src/app/data-model/: Nullable.h
main/: CHIPProjectConfig.h  CMakeLists.txt  cc1101_drv.c  cli_task.c  cli_task.h  idf_component.yml  main.c  matter_bridge.cpp  matter_bridge.h  max_nvs.c  max_nvs.h  radio_hal.h
